# clm

./: .gitignore  CMakeLists.txt  README.md  ast.c  ast.h  clm.c  clm_errors.c  clm_errors.h  files.c  files.h  gen.c  gen.h  parser.c  parser.h  symtab.c  symtab.h
clm/: CMakeLists.txt
clm/src/: clm_compiler.c
codeGen/include/codeGen/: clm_asm_headers.h  clm_code_gen.h
codeGen/src/: clm_code_gen.c
lexer/: CMakeLists.txt
lexer/src/: clm_lexer.c
parser/: CMakeLists.txt
parser/include/parser/: clm_parser.h
parser/src/: clm_parser.c
src/: CMakeLists.txt  array_list.h  clm.c  clm.h  clm_asm.c  clm_asm.h  clm_ast.c  clm_ast.h  clm_code_gen.c  clm_code_gen.h  clm_expression.c  clm_expression.h  clm_lexer.c  clm_lexer.h  clm_optimizer.c  clm_optimizer.h  clm_parser.c  clm_parser.h  clm_scope.c  clm_scope.h  clm_statement.c  clm_statement.h  clm_symbol.c  clm_symbol.h  clm_symbol_gen.c  clm_symbol_gen.h  clm_type.c  clm_type.h  clm_type_check.c  clm_type_check.h  clm_type_gen.c  clm_type_gen.h  clm_type_of.c  clm_type_of.h  keywords.inc  main.c  string_util.c
src/clm/: CMakeLists.txt  clm.c  clm_asm.c  clm_asm.h  clm_asm_headers.h  clm_code_gen.c  clm_code_gen.h  clm_error.c  clm_error.h  clm_expression.c  clm_expression.h  clm_lexer.c  clm_lexer.h  clm_optimizer.c  clm_optimizer.h  clm_parser.c  clm_parser.h  clm_scope.c  clm_scope.h  clm_statement.c  clm_statement.h  clm_symbol.c  clm_symbol_gen.c  clm_symbol_gen.h  clm_type_check.c  clm_type_check.h  clm_type_gen.c  clm_type_gen.h  clm_type_of.c  clm_type_of.h
src/tests/: CMakeLists.txt  clm_test_code_gen.h  clm_test_lexer.c  clm_test_lexer.h  clm_test_main.c  clm_test_main.h  clm_test_optimizer.h  clm_test_parser.h  clm_test_symbol_gen.h  clm_test_type_check.h  clm_test_utils.h
src/util/: CMakeLists.txt  array_list.c  array_list.h  clm_array_list.c  clm_array_list.h  clm_error.c  clm_error.h  clm_expression.c  clm_expression.h  clm_file.c  clm_scope.c  clm_scope.h  clm_statement.c  clm_statement.h  clm_string.c  clm_string.h  clm_symbol.c  clm_symbol.h  clm_type.c  clm_type.h  clm_type_of.c  clm_type_of.h  string_util.h
std/: io.clm  math.clm  matrix.clm  random.clm  string.clm
symbolGen/: CMakeLists.txt
symbolGen/src/: clm_symbol_gen.c
tests/: CMakeLists.txt  clm_test_lexer.c  clm_test_lexer.h  clm_test_main.c  clm_test_optimizer.h  clm_test_parser.c  clm_test_parser.h  clm_test_symbol_gen.h  clm_test_type_check.h  clm_tests.h  main.c
tests/include/tests/: clm_test_lexer.h  clm_test_optimizer.h  clm_test_symbol_gen.h
tests/src/: CMakeLists.txt  clm_test_code_gen.h  clm_test_lexer.c  clm_test_type_check.h
typeCheck/: CMakeLists.txt
typeCheck/src/: clm_type_check.c
util/: CMakeLists.txt
util/include/util/: clm_file.h  clm_scope.h  clm_statement.h  clm_symbol.h  clm_type.h  clm_type_of.h
util/src/: clm_array_list.c  clm_error.c  clm_expression.c  clm_file.c  clm_scope.c  clm_statement.c  clm_string.c  clm_symbol.c  clm_type.c  clm_type_of.c
